BO-27-A [Deployment] Finalized Changes to Deployment files (.gitlab-cl.yml) Issue #25

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ volumes:
 services:
   fastapi:
     build:
-      context: ./bangerz
+      context: bangerz
       dockerfile: ./Dockerfile.dev
     ports:
       - 8000:80
