--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.4.0",
+    "eslint-plugin-react-hooks": "^5.0.0-canary-910045696-20230607",
     "jwt-decode": "^3.1.2",
     "parse": "^4.1.0"
   }
