--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,40 +68,16 @@ pages:
       - public
 
 
-#
 # # Run the unit tests
-# api-unit-tests-job:
-#   image: python:3-bullseye
-#   stage: test
-#   needs:
-#     - lint-test-job
-#   script:
-#     - cd sample_service
-#     - pip install -r requirements.txt
-#     - python -m pytest
-
-# # Build Sample Service:
-# build-back-end-job:
-#   image: docker:20-dind
-#   stage: build
-#   services:
-#     - docker:20-dind
-#   before_script:
-#     - export DOCKER_REGISTRY_USER=$CI_REGISTRY_USER # built-in GitLab Registry User
-#     - export DOCKER_REGISTRY_PASSWORD=$CI_REGISTRY_PASSWORD # built-in GitLab Registry Password
-#     - export DOCKER_REGISTRY_URL=$CI_REGISTRY # built-in GitLab Registry URL
-#     - export COMMIT_HASH=$CI_COMMIT_SHA # Your current commit sha
-#     - export IMAGE_NAME_WITH_REGISTRY_PREFIX=$CI_REGISTRY_IMAGE # Your repository prefixed with GitLab Registry URL
-#     - docker login -u "$DOCKER_REGISTRY_USER" -p "$DOCKER_REGISTRY_PASSWORD" $DOCKER_REGISTRY_URL # Instructs GitLab to login to its registry
-#   script:
-#     - cd sample_service
-#     - echo "Building... " # MAKE SURE NO SPACE ON EITHER SIDE OF = IN THE FOLLOWING LINE
-#     - export CONTAINER_FULL_IMAGE_NAME_WITH_TAG=$IMAGE_NAME_WITH_REGISTRY_PREFIX/sample_service_image:$COMMIT_HASH
-#     - docker build -f ./Dockerfile --pull -t built-sample_service .
-#     - docker tag built-sample_service "$CONTAINER_FULL_IMAGE_NAME_WITH_TAG"
-#     - docker push "$CONTAINER_FULL_IMAGE_NAME_WITH_TAG"
-#     - echo $CONTAINER_FULL_IMAGE_NAME_WITH_TAG
-#     - echo "Deploying on CapRover..."
-#     - docker run caprover/cli-caprover caprover deploy --caproverUrl $CAPROVER_URL --caproverPassword $CAPROVER_PASSWORD --caproverApp $CAPROVER_APP --imageName $CONTAINER_FULL_IMAGE_NAME_WITH_TAG
-#   only:
-#     - main
+api-unit-tests-job:
+  image: python:3-bullseye
+  stage: test
+  needs:
+    - lint-test-job
+  variables:
+    DATABASE_URL: postgresql://bangerz:bangerz@db/bangerz
+    SIGNING_KEY: 6gYA0hf8n5YlmuoklG1SD8ixEuCsCTyn
+  script:
+    - cd bangerz
+    - pip install -r requirements.txt
+    - python -m pytest
